--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
-  "name": "marko-webpack",
+  "name": "marko-pwa",
   "version": "1.0.0",
-  "description": "Sample app that demonstrates the power of building UI components using Marko and Marko Widgets",
+  "description": "Sample app that demonstrates the power of MarkoJS and Service workers",
   "main": "server.js",
   "scripts": {
-    "build": "webpack",
-    "start": "npm run build && node server.js"
+    "build": "webpack --display-error-details",
+    "start": "npm run build && node server.js",
+    "nodemon": "npm run build && nodemon server.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/marko-js-samples/marko-webpack.git"
+    "url": "https://github.com/mauricionr/marko-pwa.git"
   },
-  "author": "Patrick Steele-idem <pnidem@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/marko-js-samples/marko-webpack/issues"
-  },
-  "homepage": "https://github.com/marko-js-samples/marko-webpack",
+  "author": "Mauricio",
+  "license": "MIT",
+  "homepage": "https://github.com/mauricionr/marko-pwa",
   "dependencies": {
-    "@inin/inindca-messages": "git+ssh://git@bitbucket.org/inindca/inindca-messages.git",
+    "app-module-path": "^2.2.0",
     "browser-refresh-taglib": "^1.1.0",
     "compression": "^1.6.2",
     "css-loader": "^0.26.1",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "marked": "^0.3.6",
-    "marko": "^4.0.0-rc.12",
-    "marko-loader": "^1.0.0",
+    "marko": "^4.0.1",
+    "marko-loader": "^1.3.0",
     "purecss": "^0.6.2",
     "raptor-pubsub": "^1.0.5",
     "raptor-util": "^3.1.0",
@@ -36,7 +35,13 @@
     "serve-static": "^1.11.1",
     "style-loader": "^0.13.1",
     "svg-url-loader": "^1.1.0",
-    "webpack": "^1.14.0",
+    "sw-toolbox": "^3.6.0",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.4.2",
     "whatwg-fetch": "^2.0.2"
+  },
+  "devDependencies": {
+    "extract-text-webpack-plugin": "^2.1.0",
+    "webpack": "^2.3.3"
   }
 }
